# readme-doc-healer

./: .env.example  .gitignore  Notes.md  README.md  notes.md  pyproject.toml
.github/: copilot-instructions.md
.github/skills/doc-healer/: SKILL.md
schemas/: gap_report.schema.json
scripts/: build_best_openapi.py  enrich_openapi.py  report_character_values.py
src/readme_doc_healer/: __init__.py  audit.py  config.py  config_profile.py  diagnose.py  doc_scanner.py  gap_report.py  glossary.py  heal.py  mcp_apps.py  persist.py  recipes.py  redaction.py  server.py  spec_parser.py  vagueness.py
tests/: conftest.py  test_enrich_openapi.py  test_fixtures.py  test_heal_audit.py  test_persist.py
